[project]
name = "mov"
version = "0.3.0"
description = "영화진흥위원회 영화순위 데이터 처리"
authors = [
    {name = "hun0219", email = "gsw98000@gmail.com"},
]
dependencies = [
    "requests>=2.32.3",
    "pandas>=2.2.2",
    "numpy>=2.0.1",
    "pyarrow>=17.0.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[tool.pytest.ini_options]
pythonpath = [
  ".", "src"
]

[tool.pdm]
distribution = false

[project.scripts]
mov-ping = 'mov.cli:ping'

[project.urls]
Homepage = "https://github.com/hun0219/mov"
Issues = "https://github.com/hun0219/mov.git/issues"
